@@ -1,3 +1,7 @@
+2004-08-11 22:41 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormDocument.[hm]: Added back isTopLevelObject:.
+	
 2004-08-11 07:18 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormDocument.m: Removed the delegate and data source
